solved problem of overlaping of absolute positioned divs over navigation bar with conditional rendering and react-z-index

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,13 +8,15 @@ header {
   font-family: "Oswald", sans-serif;
   background: $secondary-color;
   color: lighten($primary-color, 40%);
-  min-height: 56px;
-  z-index: 3;
+  height: 50px;
+  z-index: 999;
+  position: absolute;
+  border-top: 1px solid #ffffff;
   .logo {
     float: left;
     padding-left: 20px;
-    padding-top: $link-size + $link-padding - 27px;
-    padding-bottom: $link-size + $link-padding - 27px;
+    height: 50px;
+    line-height: 50px;
     font-size: 27px;
   }
   nav {
@@ -23,11 +25,11 @@ header {
     .link {
       float: left;
       display: block;
-      padding-top: $link-padding;
-      padding-bottom: $link-padding;
       padding-left: 30px;
       padding-right: 30px;
-      font-size: $link-size;
+      font-size: 20px;
+      height: 50px;
+      line-height: 50px;
       cursor: pointer;
     }
     .link:hover {
