--- a/src/components/home/projects/projects.scss
+++ b/src/components/home/projects/projects.scss
@@ -73,6 +73,7 @@
       // -moz-box-shadow: 2px 2px 3px 1px rgba(73, 71, 73, 1);
       // box-shadow: 2px 2px 3px 1px rgba(73, 71, 73, 1);
       position: relative;
+      z-index: 0;
       a {
         text-decoration: none;
         color: $secondary-color;
