--- a/src/index.scss
+++ b/src/index.scss
@@ -5,5 +5,5 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Montserrat", sans-serif;
-  background: $secondary-color;
+  background: #ffffff;
 }
